Fix alignment of syndication icons
Align the syndication icon and its sibling elements (which are inline)
to the middle of each other. This will ensure that the icon and other
inline elements will line up with each other regardless of the size. If
the icon is much bigger than the sibling text - the top line of the
subsequent text will line up to the middle of the icon, and visa versa.

On a slight tangent - how wonderful is this "how to Vertically Center
Content" page http://phrogz.net/css/vertical-align/index.html

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -18,8 +18,12 @@
 	display: inline-block;
 	height: 20px;
 	margin-right: 2px;
-	vertical-align: text-top;
+	vertical-align: middle;
 	width: 20px;
+}
+
+.n-syndication-icon + * {
+	vertical-align: middle;
 }
 
 .n-syndication-icon.n-syndication-icon-state-no,
